<resources>
    <string name="app_name">Login_v1</string>
    <string name="lbl_email_string">Email</string>
    <string name="lbl_password_string">Password</string>
    <string name="lbl_username_string">Username</string>
    <string name="txt_email_string">email.com</string>
    <string name="txt_password_string">........</string>
    <string name="txt_username_string">Username</string>
    <string name="btn_login_string">Log  In</string>
    <string name="btn_signup_string">Sign Up</string>
    <string-array name="planets_array">
        <item>User</item>
        <item>Admin</item>
    </string-array>
    <string name="title_activity_product_item">ProductItemActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>