<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/img_logo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="266dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="570dp" />

    <TextView
        android:id="@+id/lbl_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/lbl_email_string"
        android:textColor="@color/primary_lght"
        app:layout_constraintBottom_toTopOf="@+id/txt_user"
        app:layout_constraintStart_toStartOf="@+id/txt_user" />

    <EditText
        android:id="@+id/txt_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_lght"
        android:ems="10"
        android:hint="@string/txt_email_string"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/second_light"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.347" />

    <TextView
        android:id="@+id/lbl_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/lbl_password_string"
        android:textColor="@color/primary_lght"
        app:layout_constraintStart_toStartOf="@+id/txt_user"
        app:layout_constraintTop_toBottomOf="@+id/txt_user" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:backgroundTint="@color/primary_lght"
        android:ems="10"
        android:hint="@string/txt_password_string"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/second_light"
        app:layout_constraintStart_toStartOf="@+id/txt_user"
        app:layout_constraintTop_toBottomOf="@+id/txt_user"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/img_main_logo"
        android:layout_width="184dp"
        android:layout_height="165dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.495"
        app:srcCompat="@mipmap/logo_light_foreground" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/third_light"
        android:onClick="toSignupActivity"
        android:text="@string/btn_signup_string"
        android:textColor="@color/primary_lght"
        app:layout_constraintEnd_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toTopOf="@+id/btn_login" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/primary_lght"
        android:onClick="toHomeActivity"
        android:text="@string/btn_login_string"
        android:textColor="@color/third_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.305" />

</androidx.constraintlayout.widget.ConstraintLayout>